@@ -1,4 +1,5 @@
 Version 6.6.0
+- Added pc_key and pc_mouse to -gbrk
 - Implemented proper boolean type for C
 - Fixed -- operator for floats
 - Made the BASIC boolean type a distinct type
